# pget

./: .gitignore  CONTRIBUTING.md  README.md  WORKSPACE
.github/workflows/: test.yml
app/: BUILD.bazel  main.py
app/core/: BUILD.bazel  package_manager.py
doc/: pget.yaml
test/: test_pget.py
